# autoware.universe

common/tier4_autoware_utils/: CMakeLists.txt  package.xml
common/tier4_autoware_utils/include/tier4_autoware_utils/geometry/: boost_polygon_utils.hpp
common/tier4_autoware_utils/src/geometry/: boost_polygon_utils.cpp
control/control_validator/include/control_validator/: control_validator.hpp
control/control_validator/src/: control_validator.cpp
control/mpc_lateral_controller/include/mpc_lateral_controller/: mpc.hpp
control/mpc_lateral_controller/src/: mpc.cpp  mpc_lateral_controller.cpp
control/mpc_lateral_controller/src/qp_solver/: qp_solver_osqp.cpp  qpsolver_test.cpp
planning/behavior_path_avoidance_module/src/: utils.cpp
planning/behavior_path_planner/src/utils/goal_planner/: default_fixed_goal_planner.cpp
